--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/express": "^4.17.17",
     "@types/oracledb": "^5.2.4",
     "@types/request-promise-native": "~1.0.18",
