--- a/package.json
+++ b/package.json
@@ -52,7 +52,11 @@
     "n8n-workflow": "0.143.0",
     "prettier": "^2.8.7",
     "tslint": "^6.1.3",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "@types/node": "^20.0.0",
+    "@types/oracledb": "^5.5.0",
+    "n8n-workflow": "^1.51.0",
+    "n8n-core": "^1.51.0"
   },
   "dependencies": {
     "oracledb": "^5.5.0"
