--- a/package.json
+++ b/package.json
@@ -41,21 +41,18 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/express": "^4.17.17",
-    "@types/request-promise-native": "~1.0.18",
-    "@typescript-eslint/parser": "^5.52.0",
-    "eslint-plugin-n8n-nodes-base": "^1.12.1",
-    "gulp": "^4.0.2",
-    "n8n-core": "0.161.0",
-    "n8n-workflow": "0.143.0",
-    "prettier": "^2.8.7",
-    "tslint": "^6.1.3",
-    "typescript": "~4.9.5",
-    "@types/node": "^20.0.0",
-    "n8n-workflow": "^1.51.0",
-    "n8n-core": "^1.51.0"
-  },
+  "@types/node": "^20.0.0",
+  "@types/express": "^4.17.17",
+  "@types/request-promise-native": "~1.0.18",
+  "@typescript-eslint/parser": "^5.52.0",
+  "eslint-plugin-n8n-nodes-base": "^1.12.1",
+  "gulp": "^4.0.2",
+  "n8n-core": "1.51.0",
+  "n8n-workflow": "1.51.0",
+  "prettier": "^2.8.7",
+  "tslint": "^6.1.3",
+  "typescript": "~4.9.5"
+}
   "dependencies": {
     "oracledb": "^5.5.0"
   },
