--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "skipLibCheck": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "noEmitOnError": false
   },
   "include": [
     "credentials/**/*",
